# wasm-weakauras-parser

./: .travis.yml  Cargo.toml  build.sh  index.html  package.json  wasm_weakauras_parser.d.ts  wasm_weakauras_parser.js  wasm_weakauras_parser_bg.wasm  wasm_weakauras_parser_bg.wasm.d.ts
.github/workflows/: ci.yml
base64/: Cargo.toml  LICENSE
base64/benches/: decoding.rs  encoding.rs
base64/fuzz/: Cargo.toml
base64/fuzz/fuzz_targets/: roundtrip.rs
base64/src/: lib.rs
base64/src/decode/: avx2.rs  mod.rs  scalar.rs  sse.rs
base64/src/encode/: avx2.rs  mod.rs  scalar.rs  sse.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: serialization_ace_serialize.rs  serialization_lib_serialize.rs
core/src/: lib.rs
core/src/ace_serialize/: mod.rs
core/src/ace_serialize/deserialization/: mod.rs  reader.rs
core/src/ace_serialize/serialization/: mod.rs
core/src/lib_serialize/deserialization/: mod.rs
core/src/lib_serialize/serialization/: mod.rs
huffman/: Cargo.toml
huffman/fuzz/: Cargo.toml
huffman/fuzz/fuzz_targets/: decompression.rs
huffman/src/: lib.rs  utils.rs
lua_value/: Cargo.toml
lua_value/src/: lib.rs
parser/: Cargo.toml
parser/fuzz/: Cargo.toml
parser/fuzz/fuzz_targets/: b64_roundtrip.rs  huffman_decompression.rs  serialization.rs
parser/src/: decoder.rs  deserializer.rs  huffman.rs  lib.rs
parser/src/ace_serialize/deserialization/: mod.rs
parser/src/ace_serialize/serialization/: mod.rs
parser/src/base64/: byte_map.rs  decode.rs  encode.rs  mod.rs
parser/src/base64/decode/: avx2.rs  mod.rs  scalar.rs  sse.rs
parser/src/base64/encode/: avx2.rs  mod.rs  scalar.rs  sse.rs
parser/src/decoder/: byte_map.rs  legacy.rs  mod.rs  modern.rs
parser/src/deserialization/: mod.rs  reader.rs
parser/src/deserializer/: mod.rs  value.rs
parser/src/huffman/: lookup_table.rs  mod.rs  utils.rs
parser/src/lib_serialize/: mod.rs  type_tag.rs
parser/src/lib_serialize/deserialization/: mod.rs  reader.rs
parser/src/lib_serialize/serialization/: mod.rs
parser/src/serialization/: mod.rs
parser/src/value/: mod.rs
src/: index.html  lib.rs  worker.js
wasm_frontend/: Cargo.toml  build.sh
wasm_frontend/src/: lib.rs
