[package]
name = "wasm_weakauras_parser"
version = "0.1.0"
authors = ["Zireael <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
weakauras_parser = { path = "./parser", features = ["serde"] }
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = "0.2.58"
serde_json = "1.0.48"
