[package]
name = "wasm_weakauras_parser"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4", optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"

[dependencies.weakauras-codec]
version = "0.1.1"
default-features = false
features = ["gpl-dependencies", "flate2-zlib-rs", "serde", "lua-value-indexmap"]
