[package]
name = "weakauras_parser_base64"
version = "0.1.0"
authors = ["Zireael <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2018"
license = "BSD-2-Clause"

[features]
avx2 = []
expose_internals = []

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "encoding"
harness = false
