[package]
name = "weakauras_parser_base64"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>", "Wojciech Muła", "Alfred Klomp", "Daniel Lemire"]
edition = "2021"
license = "BSD-2-Clause"

[features]
avx2 = []
expose_internals = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "decoding"
harness = false
required-features = ["expose_internals"]

[[bench]]
name = "encoding"
harness = false
required-features = ["expose_internals"]
