[package]
name = "weakauras_parser"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[features]
fnv = ["lua_value/fnv"]
indexmap = ["lua_value/indexmap"]
serde = ["lua_value/serde"]

[dependencies]
flate2 = "1"

itoa = "1"
ryu = "1"

wa_base64 = { path = "../base64", package = "weakauras_parser_base64" }
huffman = { path = "../huffman", package = "weakauras_parser_huffman" }
lua_value = { path = "../lua_value", package = "weakauras_parser_lua_value" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }