[package]
name = "weakauras_parser_lua_value"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1", optional = true }
indexmap = { version = "1", optional = true }
fnv = { version = "1", optional = true }
