[package]
name = "weakauras_parser"
version = "0.1.0"
authors = ["Zireael <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[features]
unsafe = []

[dependencies]
inflate = "0.4.5"
lazy_static = "1.4.0"
serde = { version = "1.0.106", optional = true }
indexmap = { version = "1.3.2", optional = true }
fnv = { version = "1.0.6", optional = true }
