[package]
name = "weakauras_parser"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[features]
unsafe = []

[dependencies]
deflate = "0.8.4"
inflate = "0.4.5"

itoa = "0.4.5"
ryu = "1.0.3"

serde = { version = "1.0.106", optional = true }
indexmap = { version = "1.3.2", optional = true }
fnv = { version = "1.0.6", optional = true }
