[package]
name = "weakauras_parser"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[features]
unsafe = []

[dependencies]
flate2 = "1.0.17"

itoa = "0.4.6"
ryu = "1.0.5"

serde = { version = "1.0.116", optional = true }
indexmap = { version = "1.6.0", optional = true }
fnv = { version = "1.0.7", optional = true }
