[package]
name = "wasm_weakauras_parser"
version = "0.1.0"
authors = ["Zireael <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
weakauras_parser = { path = "../core", features = ["serde", "indexmap", "unsafe"] }
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
serde_json = "1.0.57"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
