[package]
name = "wasm_weakauras_parser"
version = "0.1.0"
authors = ["Velithris <13710677+Zireael-N@users.noreply.github.com>"]
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
weakauras_parser = { path = "../core", features = ["serde", "indexmap"] }
wee_alloc = { version = "0.4", optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
